Updates | New Page, Improvement Sidebar

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import "utils/variables";
 @import "utils/functions";
+@import "utils/mixins";
 
 @import "base/backgrounds";
 @import "base/typography";
@@ -10,3 +11,4 @@
 @import "components/footer";
 @import "components/tables";
 @import "components/contents";
+@import "components/buttons";
