--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -1,5 +1,10 @@
 $primary-color: #010012;
 $secondary-color: #fcaf25;
+$secondary-color-darken: #e09e23;
+$secondary-color-lighten: #ffb428;
+
+$black: black;
+$white: white;
 
 // SIZE CHART
 
