--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -13,7 +13,8 @@
   background: #201f2f;
   color: white;
   &.active {
-    width: 100%;
+    width: calc(100% - 344px);
+    left: 0;
   }
   @media screen and (max-width: 768px) {
     width: 100%;
@@ -24,6 +25,9 @@
 .content-leaderboard {
   width: calc(100% - 184px) !important;
   @media screen and (max-width: 768px) {
+    width: 100% !important;
+  }
+  &.active {
     width: 100% !important;
   }
 }
@@ -57,11 +61,11 @@
   color: #a5a6ac;
   background-color: #38364e;
   transition: all 0.3s;
-  @media screen and (max-width: $mobile) {
-    margin-left: -184px;
-  }
+  margin-left: -184px;
   &__burger {
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     width: 50px;
     height: 50px;
@@ -71,11 +75,6 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     cursor: pointer;
-    @media screen and (max-width: $mobile) {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
   }
   &__right {
       min-width: 344px !important;
@@ -104,7 +103,7 @@
     }
   }
   .sidebar__logo {
-    width: 165.2px;
+    width: 120.2px;
     height: auto;
     object-fit: contain;
     margin: auto 10px auto 0;
