--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -17,8 +17,8 @@
     left: 0;
   }
   @media screen and (max-width: 768px) {
-    width: 100%;
-    left: 0;
+    width: 100% !important;
+    left: 0 !important;
   }
 }
 
